Commit: modal pop up 구현

--- a/modal-game-over/css/modal.css
+++ b/modal-game-over/css/modal.css
@@ -15,9 +15,6 @@
 
 
 
-
-
-
 /* ----------------------------------------------- */
 body {
 	background-color: aliceblue;
@@ -117,7 +114,6 @@ span {
 	background-color: gray;
 	cursor: default;
 	pointer-events: none;
-	border: none;
 }
 
 .unmatched {
@@ -157,3 +153,84 @@ span {
 
 
 
+
+
+/* ----------------------------------------------- */
+/* Modal popup css class*/
+.displayNone {
+	display: none;
+}
+.displayModal {
+	display: block;;
+}
+.colorTransparent {
+	color: transparent;
+}
+
+
+/* Modal popup */
+.modal-wrapper {
+	/* position: relative; */
+	margin: 20px auto;
+	background-color: #689fe6;
+	width: 400px;
+	height: 300px;
+	border-radius: 10px;
+}
+.modal h2 {
+	text-align: center;
+	padding-top: 75px;
+
+	/* h1과 스타일 동일. 단, font-size만 다름! */
+	font-size: 30px;
+	padding-bottom: 20px;
+	font-weight: 900;
+	/* https://uigradients.com/#VisionsofGrandeur */
+	background: linear-gradient(to right, #000046, #1cb5e0);
+	-webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+	/* https://css-tricks.com/snippets/css/gradient-text/ */
+
+
+	
+	/* animation */
+	animation-name: spin;
+  animation-duration: 1000ms;
+  /* animation-iteration-count: infinite; */
+  animation-timing-function: linear; 
+}
+.time-spent, .time-record {
+	display: block;
+	/* text-indent: 15px; */
+	text-align: center;
+	margin-top: 30px;
+
+
+	/* animation */
+	animation-name: spin;
+  animation-duration: 1400ms;
+  /* animation-iteration-count: infinite; */
+  animation-timing-function: linear; 
+}
+.time-record {
+	margin-top: 20px;
+
+	/* animation */
+	animation-name: spin;
+  animation-duration: 1500ms;
+  /* animation-iteration-count: infinite; */
+  animation-timing-function: linear; 
+}
+
+
+
+/* ----------------------------------------------- */
+/* animation */
+@keyframes spin {
+	0% {
+			transform:rotateY(0deg);
+	}
+	70% {
+			transform:rotateY(360deg);
+	}
+}
